Added User Controller